# Jarvis

./: .gitattributes  LICENSE  README.md
scripts/: download-wakeword-models.sh
src/: Javis.slnx
src/ApiService/: ApiService.csproj  Program.cs
src/ApiService/Data/: JarvisDbContext.cs
src/ApiService/Data/Entities/: ChatLog.cs  JarvisSetting.cs  ReferenceVoice.cs
src/ApiService/Endpoints/: ChatEndpoint.cs  SettingsEndpoint.cs  SpeakEndpoint.cs  TranscribeEndpoint.cs  VoicesEndpoint.cs
src/ApiService/Hubs/: JarvisHub.cs
src/ApiService/Properties/: launchSettings.json
src/ApiService/Services/: CommandParser.cs  JarvisOrchestrator.cs  SettingsService.cs  TtsProxy.cs  WhisperService.cs
src/AppHost/: AppHost.cs  AppHost.csproj
src/AppHost/Properties/: launchSettings.json
src/ServiceDefaults/: Extensions.cs
src/TtsService/: README.md  main.py  pyproject.toml  tts_engine.py
src/Web/: .gitignore  Web.esproj  angular.json  package-lock.json  package.json  proxy.conf.js
src/Web/public/: wakeword-worklet.js
src/Web/public/openwakeword/: README.md
src/Web/public/openwakeword/models/: hey_jarvis_v0.1.onnx  hey_jarvis_v0.1.tflite
src/Web/src/: index.html  styles.css
src/Web/src/app/: app.config.ts  app.routes.ts  app.ts
src/Web/src/app/core/api/: api-base-url.interceptor.ts  jarvis-api.service.ts
src/Web/src/app/core/audio/: audio-playback.service.ts  media-recorder.service.ts
src/Web/src/app/core/jarvis/: jarvis-orchestrator.service.ts  jarvis-signalr.service.ts
src/Web/src/app/core/theme/: theme.service.ts
(+4 files in other folders)
