[project]
name = "javis-tts-service"
version = "0.1.0"
description = "Qwen3-TTS FastAPI service for Javis voice assistant"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "qwen-tts>=0.1.0",
    "torch>=2.4.0",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    "pydantic>=2.9.0",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.6.0",
    "loguru>=0.7.2",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
